junção com códigos bruna - funcionando